Fighting with GitHub Actions for v1.1.2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4 # It's good practice to update this too
 
     - name: Extract version from commit message
       id: get_version
@@ -33,54 +33,43 @@ jobs:
     - name: Build on Linux
       if: matrix.os == 'ubuntu-latest'
       run: |
-        # Compile the C code with the new binary name "tinygate"
         gcc -std=c23 -Wall -Wextra -pthread main.c config.c -o tinygate
-        # Create a versioned archive
         tar -czvf tinygate-${{ env.VERSION }}-linux.tar.gz tinygate
 
     - name: Build on Windows
       if: matrix.os == 'windows-latest'
       run: |
-        # Compile the C code with the new binary name "tinygate.exe"
         gcc -std=c23 -Wall -Wextra -pthread main.c config.c -o tinygate.exe -lws2_32
-        # Create a versioned archive
         7z a -tzip tinygate-${{ env.VERSION }}-windows.zip tinygate.exe
 
     - name: Upload Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4 # <-- UPDATED from v3 to v4
       with:
         name: proxy-binaries-${{ matrix.os }}
-        path: tinygate-*.* # Uploads the newly named and versioned file
+        path: tinygate-*.*
 
   # This job creates the GitHub Release and uploads the built binaries
   create_release:
     name: Create GitHub Release
-    # This job depends on the 'build' job, so it will only run if building succeeds
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
     - name: Extract version from commit message
       id: get_version
-      # This command uses grep to find the version string (e.g., v1.2.3) in the commit message
       run: echo "VERSION=$(echo '${{ github.event.head_commit.message }}' | grep -o 'v[0-9]*\.[0-9]*\.[0-9]*')" >> $GITHUB_ENV
 
     - name: Download all build artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4 # <-- UPDATED from v3 to v4
       with:
-        path: artifacts/ # Download all artifacts into this directory
+        path: artifacts/
 
     - name: Create Release and Upload Assets
       uses: softprops/action-gh-release@v1
       with:
-        # The tag name and release name are set using the version from the commit message
         tag_name: ${{ env.VERSION }}
         name: "Release ${{ env.VERSION }}"
         body: "Automated release based on commit message."
-        # Use a glob pattern to find and upload the versioned artifact files
         files: |
           artifacts/proxy-binaries-ubuntu-latest/tinygate-*.tar.gz
           artifacts/proxy-binaries-windows-latest/tinygate-*.zip
